--- a/program.htm
+++ b/program.htm
@@ -337,6 +337,14 @@ Makefile 列印Shell執行結果</a><br>
 int 0x80、sysenter、syscall</a><br>
 
 &dash;
+<a href="program/gnu_swap.htm">
+交換變數(無需暫存變數)</a><br>
+
+&dash;
+<a href="program/gnu_bool.htm">
+為何變數要使用兩個!!符號</a><br>
+
+&dash;
 <a href="program/gnu_preprocessor.htm">
 如何在Preprocessor列印定義的數值</a><br>
 
@@ -2158,168 +2166,76 @@ Python</h3>
 
 <div id="vc"></div>
 <h3><img src="img/photos/vc.jpg" class="floatLeft"/>
-Visual C++</h3>
+Visual C++ 6.0</h3>
 <hr size="1"><br><br><br><br><br>
 
-&oplus;
-<b>Console</b><br>
+&dash;
+<a href="program/vc_wow64.htm">
+Wow64</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/console/volatile.htm">
-    volatile</a><br>
+&dash;
+<a href="program/vc_usbview.htm">
+分析USBView</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/utf8_big5.htm">
-    UTF8轉BIG5</a><br>
+&dash;
+<a href="program/vc_utf8_big5.htm">
+UTF-8轉BIG-5</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/console/extern_c.htm">
-    extern "C"</a><br>
+&dash;
+<a href="program/vc_stdfont.htm">
+顯示倚天中文字型</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/console/and_or.htm">
-    &amp;&amp;、&amp;、||、|</a><br>
+&dash;
+<a href="program/vc_dropfile.htm">
+Drop File</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/stdfont.htm">
-    顯示倚天中文字型</a><br>
+&dash;
+<a href="program/vc_screen.htm">
+Capture Screen</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/console/swap.htm">
-    交換變數(無需暫存變數)</a><br>
+&dash;
+<a href="program/vc_outputdebugstring.htm">
+OutputDebugString</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/bool.htm">
-    為何變數要使用兩個!!符號</a><br>
+&dash;
+<a href="program/vc_dlg_scroll.htm">
+CScrollView Dialog</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/console/decl_def.htm">
-    declaration、definition</a><br>
+&dash;
+<a href="program/vc_mkdir.htm">
+MakeSureDirectoryPathExists</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/console/math_skill.htm">
-    (y*3.14)、((y*314)/100)、((y*201)&gt;&gt;6)</a><br>
+&dash;
+<a href="program/vc_close.htm">
+WM_CLOSE、WM_DESTROY、WM_QUIT</a><br>
 
-&oplus;
-<b>GUI</b><br>
+&dash;
+<a href="program/vc_key.htm">
+GetKeyState、GetKeyboardState、GetAsyncKeyState</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Win32 API<br>
+&dash;
+<a href="program/vc_cache.htm">
+FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/vc/win32api/setup.htm">
-        開發環境</a><br>
+&dash;
+<a href="program/vc_fix_uac.htm">
+解決執行管理權限問題</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/vc/win32api/hello.htm">
-        Hello world!</a><br>
+&dash;
+<a href="program/vc_fix_list.htm">
+解決無法自動顯示函數的問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/dropfile.htm">
-    Drop File</a><br>
+&dash;
+<a href="program/vc_fix_afxcontrolbars.htm">
+解決Cannot open file: afxcontrolbars.h問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/usbview.htm">
-    分析USBView</a><br>
+&dash;
+<a href="program/vc_fix_incrbuildpicture.htm">
+解決Internal error during IncrBuildImage問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/timer.htm">
-    System Timer</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/screen.htm">
-    Screen Capture</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/proc_x86x64.htm">
-    Process x86/x64</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/outputdebugstring.htm">
-    OutputDebugString</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/make_directory.htm">
-    MakeSureDirectoryPathExists</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/wm_close.htm">
-    WM_CLOSE、WM_DESTROY、WM_QUIT</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/getkeyboardstate.htm">
-    GetKeyState、GetKeyboardState、GetAsyncKeyState</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/cache.htm">
-    FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/win32api/fix_lnk1112.htm">
-    解決"LNK1112: module machine type 'x64' conflicts with target machine type 'X86'"的問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    MFC<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/vc/win32api/setup.htm">
-        開發環境</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/vc/mfc/hello.htm">
-        Hello world!</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/wow64.htm">
-    Wow64</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/memory_leak.htm">
-    Memory Leak</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/unroll_for.htm">
-    Unroll for、while</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/cscrollview_dlg.htm">
-    CScrollView Dialog</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_uac.htm">
-    解決執行管理權限的問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_auto_list.htm">
-    解決無法自動顯示函數的問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_mspdb60.htm">
-    解決"mspdb60.dll Error Messages"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_mspdb80.htm">
-    解決"mspdb80.dll Error Messages"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_afxcontrolbars.htm">
-    解決"cannot open file: afxcontrolbars.h"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_c2065.htm">
-    解決"error C2065: ifstream : undeclared"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_guid_usb_device.htm">
-    解決"_GUID_DEVINTERFACE_USB_DEVICE"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_incrbuildpicture.htm">
-    解決"Internal error during IncrBuildImage"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/vc/mfc/fix_d9028.htm">
-    解決"warning D9028: minimal rebuild failure"問題</a>
+&dash;
+<a href="program/vc_fix_lnk1112.htm">
+解決LNK1112: module machine type 'x64' conflicts with target machine type 'X86'問題</a><br>
 <br><br><br><br>
 
 <div id="csharp"></div>
