IDA Pro Refined.

--- a/reverse.htm
+++ b/reverse.htm
@@ -77,16 +77,13 @@ IDA Pro</h3>
 &oplus;
 <b>Python</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="reverse/idapro/py_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/idapro_py_hello.htm">
     Hello, world!</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    x86<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="reverse/idapro/py_x86_getregname.htm">
-        Get Register Name</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/idapro_py_getx86reg.htm">
+    Get Register(x86)</a><br>
 
 &oplus;
 <b>IDC</b><br>
