VC How to export makefile.

--- a/program.htm
+++ b/program.htm
@@ -2218,6 +2218,10 @@ GetKeyState、GetKeyboardState、GetAsyncKeyState</a><br>
 FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 
 &dash;
+<a href="program/vc_export.htm">
+Export Makefile</a><br>
+
+&dash;
 <a href="program/vc_fix_uac.htm">
 解決執行管理權限問題</a><br>
 
