VC Added hello example based on mfc.

--- a/program.htm
+++ b/program.htm
@@ -1589,6 +1589,13 @@ Export Makefile</a><br>
 &dash;
 <a href="program/vc_fix_lnk1112.htm">
 解決LNK1112: module machine type 'x64' conflicts with target machine type 'X86'問題</a><br>
+
+&oplus;
+<b>Microsoft Fundation Class (MFC)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/vc_mfc_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 
