--- a/program.htm
+++ b/program.htm
@@ -1519,12 +1519,8 @@ Visual C++ 6.0</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
-<a href="program/vc_wow64.htm">
-Wow64</a><br>
-
-&dash;
-<a href="program/vc_usbview.htm">
-分析USBView</a><br>
+<a href="program/vc_dropfile.htm">
+Drop File</a><br>
 
 &dash;
 <a href="program/vc_utf8_big5.htm">
@@ -1535,12 +1531,31 @@ UTF-8轉BIG-5</a><br>
 顯示倚天中文字型</a><br>
 
 &dash;
-<a href="program/vc_dropfile.htm">
-Drop File</a><br>
-
-&dash;
 <a href="program/vc_screen.htm">
 Capture Screen</a><br>
+
+&oplus;
+<b>Microsoft Fundation Class (MFC)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/vc_mfc_setup.htm">
+    開發環境</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/vc_mfc_hello.htm">
+    Hello, world!</a><br>
+
+&dash;
+<a href="program/vc_wow64.htm">
+Wow64</a><br>
+
+&dash;
+<a href="program/vc_usbview.htm">
+分析USBView</a><br>
+
+&dash;
+<a href="program/vc_export.htm">
+Export Makefile</a><br>
 
 &dash;
 <a href="program/vc_outputdebugstring.htm">
@@ -1567,10 +1582,6 @@ GetKeyState、GetKeyboardState、GetAsyncKeyState</a><br>
 FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 
 &dash;
-<a href="program/vc_export.htm">
-Export Makefile</a><br>
-
-&dash;
 <a href="program/vc_fix_uac.htm">
 解決執行管理權限問題</a><br>
 
@@ -1589,13 +1600,6 @@ Export Makefile</a><br>
 &dash;
 <a href="program/vc_fix_lnk1112.htm">
 解決LNK1112: module machine type 'x64' conflicts with target machine type 'X86'問題</a><br>
-
-&oplus;
-<b>Microsoft Fundation Class (MFC)</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="program/vc_mfc_hello.htm">
-    Hello, world!</a><br>
 <br><br><br><br>
 
 
