--- a/program/vc_mfc_hello.htm
+++ b/program/vc_mfc_hello.htm
@@ -60,7 +60,7 @@ clean:
 <pre>
 $ export WINEPREFIX=/home/user/.wine_amd64
 
-$ rm -rf Debug
+$ box86 wine nmake -f main.mak clean
 $ box86 wine nmake -f main.mak
 $ box86 wine Debug/main.exe
 </pre><br>
