VC Added dialog example.

--- a/program.htm
+++ b/program.htm
@@ -1542,8 +1542,19 @@ Capture Screen</a><br>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/vc_mfc_makefile.htm">
+    main.mak</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/vc_mfc_hello.htm">
     Hello, world!</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Dialog</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/vc_mfc_dlg_window.htm">
+        Create Window</a><br>
 
 &dash;
 <a href="program/vc_wow64.htm">
