--- a/program/vc_mfc_setup.htm
+++ b/program/vc_mfc_setup.htm
@@ -66,7 +66,7 @@ C:\Program Files (x86)\Microsoft Visual Studio\Common\MSDev98
 PATH
 </p>
 <pre>
-C:\Program Files (x86)\Microsoft Visual Studio\Common\Tools\WinNT;C:\Program Files\Microsoft Visual Studio\Common\MSDev98\Bin;C:\Program Files (x86)\Microsoft Visual Studio\Common\Tools;C:\Program Files (x86)\Microsoft Visual Studio\VC98\bin
+C:\Program Files (x86)\Microsoft Visual Studio\Common\Tools\WinNT;C:\Program Files (x86)\Microsoft Visual Studio\Common\MSDev98\Bin;C:\Program Files (x86)\Microsoft Visual Studio\Common\Tools;C:\Program Files (x86)\Microsoft Visual Studio\VC98\bin
 </pre>
 <p>
 <img style="border:0px" src="vc_mfc_setup/1.jpg" class="maxSize"><br><br>
