--- a/reverse.htm
+++ b/reverse.htm
@@ -212,25 +212,25 @@ Patch License(v7.3)</a><br>
 OllyDbg</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="reverse/ollydbg/jmp_loop.htm">
+&dash;
+<a href="reverse/ollydbg_jmp.htm">
 JMP $</a><br>
 
-&lowast;
-<a href="reverse/ollydbg/hotkey.htm">
+&dash;
+<a href="reverse/ollydbg_hotkey.htm">
 快速鍵</a><br>
 
-&lowast;
-<a href="reverse/ollydbg/obfuscation.htm">
+&dash;
+<a href="reverse/ollydbg_obf.htm">
 Obfuscation</a><br>
 
-&lowast;
-<a href="reverse/ollydbg/reverse_mfc.htm">
+&dash;
+<a href="reverse/ollydbg_mfc.htm">
 逆向MFC編譯的程式</a><br>
 
-&lowast;
-<a href="reverse/ollydbg/fix_psapi.htm">
-解決"GetProcessImageFileNameW could not ..."問題</a>
+&dash;
+<a href="reverse/ollydbg_fix_psapi.htm">
+解決GetProcessImageFileNameW could not ...問題</a>
 <br><br><br><br>
 
 <div id="virus"></div>
