--- a/reverse.htm
+++ b/reverse.htm
@@ -235,42 +235,42 @@ Obfuscation</a><br>
 
 <div id="virus"></div>
 <h3><img src="img/photos/virus.jpg" class="floatLeft"/>
-病毒樣本分析</h3>
+樣本分析</h3>
 <hr size="1"><br><br><br><br><br>
 
-&oplus;
-<b>DOC</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="reverse/virus/3ea648fe161d27a22d68cd8d6ee6b37294532e82.htm">
-    3ea648fe161d27a22d68cd8d6ee6b37294532e82</a><br>
-        
-&oplus;
-<b>XLS 4.0</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="reverse/virus/3fb082368a8062316976fdfeeceae130d98a3247.htm">
-    3fb082368a8062316976fdfeeceae130d98a3247</a><br>
-        
-&lowast;
-<a href="reverse/virus/tls.htm">
+&dash;
+<a href="reverse/virus_tls.htm">
 如何製作TLS PE檔案</a><br>
 
-&lowast;
-<a href="reverse/virus/xls4.htm">
+&dash;
+<a href="reverse/virus_xls4.htm">
 如何製作XLS 4.0檔案</a><br>
 
-&lowast;
-<a href="reverse/virus/autorun_pdf.htm">
+&dash;
+<a href="reverse/virus_autorun_pdf.htm">
 如何製作AutoRun PDF檔案</a><br>
 
-&lowast;
-<a href="reverse/virus/fix_locale.htm">
-解決"loadlocale.c:129: _nl_intern_locale_data: Assertion"問題</a><br>
+&dash;
+<a href="reverse/virus_fix_locale.htm">
+解決Loadlocale.c:129: _nl_intern_locale_data: Assertion問題</a><br>
 
-&lowast;
-<a href="reverse/virus/fix_pdf.htm">
-解決"convert-im6.q16: attempt to perform an operation not allowed by the security policy"問題</a><br>
+&dash;
+<a href="reverse/virus_fix_pdf.htm">
+解決Convert-im6.q16: attempt to perform an operation not allowed by the security policy問題</a><br>
+
+&oplus;
+<b>Microsoft Word</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/virus_3ea648.htm">
+    3ea648fe161d27a22d68cd8d6ee6b37294532e82</a><br>
+
+&oplus;
+<b>Microsoft Excel 4.0</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/virus_3fb082.htm">
+    3fb082368a8062316976fdfeeceae130d98a3247</a><br>
 <br><br><br><br>
 
 <div id="gdb"></div>
