--- a/reverse.htm
+++ b/reverse.htm
@@ -278,25 +278,25 @@ Obfuscation</a><br>
 GDB</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="reverse/gdb/unstrip.htm">
+&dash;
+<a href="reverse/gdb_unstrip.htm">
 eu-unstrip</a><br>
 
-&lowast;
-<a href="reverse/gdb/dump.htm">
+&dash;
+<a href="reverse/gdb_dump.htm">
 Dump Process</a><br>
 
-&lowast;
-<a href="reverse/gdb/symbol.htm">
+&dash;
+<a href="reverse/gdb_symbol.htm">
 Load Symbol File</a><br>
 
-&lowast;
-<a href="reverse/gdb/waitfor.htm">
+&dash;
+<a href="reverse/gdb_wait.htm">
 Wait for Process</a><br>
 
-&lowast;
-<a href="reverse/gdb/detach.htm">
-解決"ptrace: Operation not permitted"問題</a><br>
+&dash;
+<a href="reverse/gdb_detach.htm">
+解決ptrace: Operation not permitted問題</a><br>
 <br><br><br><br>
 
 <div id="gbc"></div>
