--- a/reverse.htm
+++ b/reverse.htm
@@ -304,13 +304,11 @@ Wait for Process</a><br>
 Game Boy Color</h3>
 <hr size="1"><br><br><br><br><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Hack ROM<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="reverse/gbc/hack_tintin.htm">
-        Tintin in Tibet(丁丁在西藏)</a><br>
+&dash;
+<a href="reverse/gbc_tintin.htm">
+Tintin in Tibet(丁丁在西藏)</a><br>
 <br><br><br><br>
+
 <div id="fceux"></div>
 <h3><img src="img/photos/fceux.jpg" class="floatLeft"/>
 FCEUX</h3>
