--- a/reverse.htm
+++ b/reverse.htm
@@ -24,7 +24,7 @@
     <a href="#ollydbg">     <img src="img/photos/ollydbg.jpg"       class="t0" title="OllyDbg"/></a>
     <a href="#virus">       <img src="img/photos/virus.jpg"         class="t0" title="病毒樣本分析"/></a>
     <a href="#gdb">         <img src="img/photos/gdb.jpg"           class="t0" title="GDB"/></a>
-    <a href="#gbc">         <img src="img/photos/gbc.jpg"           class="t0" title="Game Boy Color"/></a>
+    <a href="#bgb">         <img src="img/photos/bgb.jpg"           class="t0" title="BGB Debugger"/></a>
     <a href="#fceux">       <img src="img/photos/fceux.jpg"         class="t0" title="FCEUX"/></a>
     <a href="#dosbox">      <img src="img/photos/dosbox.jpg"        class="t0" title="DOSBox"/></a>
     <a href="#mame">        <img src="img/photos/mame.jpg"          class="t0" title="MAMED"/></a>
@@ -299,13 +299,13 @@ Wait for Process</a><br>
 解決ptrace: Operation not permitted問題</a><br>
 <br><br><br><br>
 
-<div id="gbc"></div>
-<h3><img src="img/photos/gbc.jpg" class="floatLeft"/>
-Game Boy Color</h3>
+<div id="bgb"></div>
+<h3><img src="img/photos/bgb.jpg" class="floatLeft"/>
+BGB Debugger</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
-<a href="reverse/gbc_tintin.htm">
+<a href="reverse/bgb_tintin.htm">
 Tintin in Tibet(丁丁在西藏)</a><br>
 <br><br><br><br>
 
