--- a/reverse.htm
+++ b/reverse.htm
@@ -314,39 +314,36 @@ Tintin in Tibet(丁丁在西藏)</a><br>
 FCEUX</h3>
 <hr size="1"><br><br><br><br><br>
 
-&oplus;
-<b>讓NES遊戲支援振動功能</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="reverse/fceux/rumble_reg.htm">
-    Register</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/rg300/port_fceux.htm">
-    移植FCEUX(支援振動)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Hack ROM<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="reverse/fceux/rumble_1.htm">
-        Mighty Final Fight(街頭快打)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="reverse/fceux/rumble_2.htm">
-        Ninja Ryukenden III(忍者龍劍傳3)</a><br>
-
-&lowast;
-<a href="reverse/fceux/debug.htm">
+&dash;
+<a href="reverse/fceux_debug.htm">
 Debug ROM</a><br>
 
-&lowast;
-<a href="reverse/fceux/patch_sprite_ascii.htm">
+&dash;
+<a href="reverse/fceux_patch_sprite_ascii.htm">
 Patch Sprite(ASCII)</a><br>
 
-&lowast;
-<a href="reverse/fceux/patch_sprite_index.htm">
+&dash;
+<a href="reverse/fceux_patch_sprite_index.htm">
 Patch Sprite(Index)</a><br>
+
+&oplus;
+<b>支援振動功能</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/fceux_rumble_reg.htm">
+    Register</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/fceux_rumble_port.htm">
+    移植FCEUX(支援振動)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/fceux_rumble_mff.htm">
+    Mighty Final Fight(街頭快打)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="reverse/fceux_rumble_nr3.htm">
+    Ninja Ryukenden III(忍者龍劍傳3)</a><br>
 <br><br><br><br>
 
 <div id="dosbox"></div>
