--- a/reverse/bgb_tintin.htm
+++ b/reverse/bgb_tintin.htm
@@ -10,7 +10,7 @@ https://bgb.bircd.org/<br>
 https://www.huderlem.com/blog/posts/carrot-crazy-1/<br>
 https://pttgame.com/emulator/M.1300371688.A.C95.html<br><br>
 
-修改目標：無限血量<br><br>
+<b>修改目標</b>：無限血量<br><br>
 
 進入遊戲後，按下ESC鍵開啟Debugger視窗<br>
 <img src="bgb_tintin/1.jpg" class="maxSize"><br><br>
