--- a/reverse.htm
+++ b/reverse.htm
@@ -351,8 +351,8 @@ Patch Sprite(Index)</a><br>
 DOSBox</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="reverse/dosbox/debug.htm">
+&dash;
+<a href="reverse/dosbox_debug.htm">
 Debug ROM</a><br>
 <br><br><br><br>
 
