--- a/reverse.htm
+++ b/reverse.htm
@@ -361,16 +361,13 @@ Debug ROM</a><br>
 MAME</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="reverse/mame/debug.htm">
+&dash;
+<a href="reverse/mame_debug.htm">
 Debug ROM</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    KOF97<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="reverse/mame/kof97_p2hit.htm">
-        P2被打的斷點</a><br>
+&dash;
+<a href="reverse/mame_kof97_p2hit.htm">
+KOF97(Player2被打的斷點)<br>
 <br><br><br><br>
 </p>
 
