--- a/trip/france_paris.htm
+++ b/trip/france_paris.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - 法國 - 2024-02 - <b>巴黎</b></h3>
+<h3><a href="../trip.htm">旅遊雜記</a> - 法國 - 2024-02 - <b>巴黎</b></h3>
 <hr size="1"><br>
 <p>
 沒記錯的話，這應該是司徒第三次來巴黎旅遊，而印象最深刻的事情莫過於海關的通關速度，不過這次又讓司徒留下一個更深刻的印象，那就是機場WIFI無法使用(全機場WIFI故障)，然後更尷尬的是，eSIM是需要有網路連接時才可以加入使用，因此，建議大家提前一天加入eSIM設定<br>
