--- a/trip/italy_milano.htm
+++ b/trip/italy_milano.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - 義大利 - 2023-01 - <b>米蘭</b></h3>
+<h3><a href="../trip.htm">旅遊雜記</a> - 義大利 - 2023-01 - <b>米蘭</b></h3>
 <hr size="1"><br>
 <p>
 行程表：<br>
