CNC1610 Pro Refined.

--- a/picture.htm
+++ b/picture.htm
@@ -258,20 +258,20 @@ KiCAD</h3>
 CNC1610 Pro</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="picture/cnc1610pro/mat.htm">
+&dash;
+<a href="picture/cnc1610pro_mat.htm">
 靜音墊</a><br>
 
-&lowast;
-<a href="picture/cnc1610pro/wall.htm">
+&dash;
+<a href="picture/cnc1610pro_wall.htm">
 自製擋板</a><br>
 
-&lowast;
-<a href="picture/cnc1610pro/bestz.htm">
+&dash;
+<a href="picture/cnc1610pro_z.htm">
 如何找出最佳的Z軸位置</a><br>
 
-&lowast;
-<a href="picture/cnc1610pro/flatcam.htm">
+&dash;
+<a href="picture/cnc1610pro_flatcam.htm">
 使用FlatCAM將Gerber轉成CNC G-Code</a><br>
 <br><br><br><br>
 
