Ender 3 Pro 3D Refined.

--- a/picture.htm
+++ b/picture.htm
@@ -280,8 +280,8 @@ CNC1610 Pro</h3>
 Ender 3 Pro 3D印表機</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="picture/ender3pro/zoffset.htm">
+&dash;
+<a href="picture/ender3pro_z.htm">
 Z軸調平</a><br>
 <br><br><br><br>
 
