--- a/picture.htm
+++ b/picture.htm
@@ -290,33 +290,33 @@ Z軸調平</a><br>
 CR-7 3D印表機</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="picture/cr7/params.htm">
+&dash;
+<a href="picture/cr7_params.htm">
 建議的設定參數</a><br>
 
-&lowast;
-<a href="picture/cr7/less.htm">
+&dash;
+<a href="picture/cr7_less.htm">
 為何列印的線越來越稀</a><br>
 
-&lowast;
-<a href="picture/cr7/smelly.htm">
+&dash;
+<a href="picture/cr7_smelly.htm">
 如何消除噴嘴加熱時的臭味</a><br>
 
-&lowast;
-<a href="picture/cr7/ext_40cm.htm">
+&dash;
+<a href="picture/cr7_40cm.htm">
 改造列印長度從15cm到40cm</a><br>
 
-&lowast;
-<a href="picture/cr7/fix_heat.htm">
+&dash;
+<a href="picture/cr7_heat.htm">
 解決列印到最後會降溫的問題</a><br>
 
-&lowast;
-<a href="picture/cr7/cura.htm">
+&dash;
+<a href="picture/cr7_cura.htm">
 為何Cura沒有顯示USB列印的選項</a><br>
 
-&lowast;
-<a href="picture/cr7/sdcard.htm">
-列印到一半會出現"Wait for user..."的問題</a><br>
+&dash;
+<a href="picture/cr7_wait.htm">
+解決列印到一半會出現Wait for user...問題</a><br>
 <br><br><br><br>
 
 <div id="mini-kossel"></div>
