Mini Kossel Refined.

--- a/picture.htm
+++ b/picture.htm
@@ -324,68 +324,65 @@ CR-7 3D印表機</h3>
 Mini Kossel 3D印表機</h3>
 <hr size="1"><br><br><br><br><br>
 
-&oplus;
-<b>RAMPS 1.4</b><br>
+&dash;
+<a href="picture/minikossel_z.htm">
+最簡單的手動調平步驟</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/z_manual.htm">
-    最簡單的手動調平步驟</a><br>
+&dash;
+<a href="picture/minikossel_nozzle.htm">
+如何拔掉噴嘴</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/remove_nozzle.htm">
-    如何拔掉噴嘴</a><br>
+&dash;
+<a href="picture/minikossel_heatbed.htm">
+如何驅動加熱板</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/heatbed.htm">
-    如何驅動加熱板</a><br>
+&dash;
+<a href="picture/minikossel_clean.htm">
+如何清除噴嘴堵住</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/clean_block.htm">
-    如何清除噴嘴堵住</a><br>
+&dash;
+<a href="picture/minikossel_temp.htm">
+如何加快加熱速度</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/temp.htm">
-    如何加快加熱速度</a><br>
+&dash;
+<a href="picture/minikossel_eeprom.htm">
+如何清除EEPROM資料</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/erase_eeprom.htm">
-    如何清除EEPROM資料</a><br>
+&dash;
+<a href="picture/minikossel_precise.htm">
+如何印出超高精度的物件</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/high_precise.htm">
-    如何印出超高精度的物件</a><br>
+&dash;
+<a href="picture/minikossel_material.htm">
+如何解決出料不足的問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/fix_material.htm">
-    如何解決出料不足的問題</a><br>
+&dash;
+<a href="picture/minikossel_g28.htm">
+如何在列印結束後執行G28</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/end_g28.htm">
-    如何在列印結束後執行G28</a><br>
+&dash;
+<a href="picture/minikossel_circle.htm">
+如何讓圓圈可以列印更完美</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/circle.htm">
-    如何讓圓圈可以列印更完美</a><br>
+&dash;
+<a href="picture/minikossel_retract.htm">
+為何抽線容易斷</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/retract.htm">
-    為何抽線容易斷</a><br>
+&dash;
+<a href="picture/minikossel_line.htm">
+為何出料會斷斷續續</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/line.htm">
-    為何出料會斷斷續續</a><br>
+&dash;
+<a href="picture/minikossel_e0.htm">
+為何無發轉動送料馬達</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/e0_motor.htm">
-    為何無發轉動送料馬達</a><br>
+&dash;
+<a href="picture/minikossel_abs.htm">
+為何變成梯形的結果(正方形的圖)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/abs.htm">
-    為何變成梯形的結果(正方形的圖)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="picture/mini-kossel/ramps-1.4/burn.htm">
-    為何列印出來的PLA會有燒焦的現象</a><br>
+&dash;
+<a href="picture/minikossel_burn.htm">
+為何列印出來的PLA會有燒焦的現象</a><br>
 <br><br><br><br>
 
 <div id="m3d"></div>
