--- a/picture.htm
+++ b/picture.htm
@@ -390,24 +390,20 @@ Mini Kossel 3D印表機</h3>
 Micro 3D印表機</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="picture/m3d/review.htm">
-介紹</a><br>
-
-&lowast;
-<a href="picture/m3d/calibration.htm">
+&dash;
+<a href="picture/m3d_cal.htm">
 校準底座</a><br>
 
-&lowast;
-<a href="picture/m3d/support.htm">
+&dash;
+<a href="picture/m3d_support.htm">
 自製支撐架</a><br>
 
-&lowast;
-<a href="picture/m3d/backlash.htm">
+&dash;
+<a href="picture/m3d_backlash.htm">
 校準圓型列印</a><br>
 
-&lowast;
-<a href="picture/m3d/cover.htm">
+&dash;
+<a href="picture/m3d_cover.htm">
 全罩式保護套</a><br>
 <br><br><br><br>
 
