da Vinci Mini Refined.

--- a/picture.htm
+++ b/picture.htm
@@ -412,20 +412,16 @@ Micro 3D印表機</h3>
 da Vinci Mini 3D印表機</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="picture/davinci-mini/review.htm">
-介紹</a><br>
-
-&lowast;
-<a href="picture/davinci-mini/start.htm">
+&dash;
+<a href="picture/davincimini_start.htm">
 關於出料</a><br>
 
-&lowast;
-<a href="picture/davinci-mini/case.htm">
+&dash;
+<a href="picture/davincimini_case.htm">
 全罩式保護套</a><br>
 
-&lowast;
-<a href="picture/davinci-mini/base.htm">
+&dash;
+<a href="picture/davincimini_base.htm">
 口紅膠、3M 2090膠帶</a>
 <br><br><br><br>
 </p>
