--- a/driver/wdm_asm_setup.htm
+++ b/driver/wdm_asm_setup.htm
@@ -5,12 +5,14 @@
 <h3><a href="../index.htm">掌機</a> - Windows Driver Model (WDM) - Assembly - <b>開發環境</b></h3>
 <hr size="1"><br>
 <p>
+參考資訊：<br>
+https://github.com/steward-fu/website/releases/download/wdm/masm32.zip<br><br>
+
 安裝步驟：<br>
-1. https://github.com/steward-fu/website/releases/download/wdm/masm32.zip<br>
-2. 解壓縮到<b>C:\</b>
+1. 解壓縮masm32.zip到C:\根目錄<br>
 </p>
 <pre>
-C:\masm32\bin&gt;ml.exe
+C:\masm32\bin&gt; ml.exe
     Microsoft (R) Macro Assembler Version 6.14.8444
     Copyright (C) Microsoft Corp 1981-1997.  All rights reserved.
 
