--- a/reverse.htm
+++ b/reverse.htm
@@ -22,7 +22,7 @@
     <a href="#ghidra">      <img src="img/photos/ghidra.jpg"        class="t0" title="Ghidra"/></a>
     <a href="#idapro">      <img src="img/photos/idapro.jpg"        class="t0" title="IDA Pro"/></a>
     <a href="#ollydbg">     <img src="img/photos/ollydbg.jpg"       class="t0" title="OllyDbg"/></a>
-    <a href="#virus">       <img src="img/photos/virus.jpg"         class="t0" title="病毒樣本分析"/></a>
+    <a href="#virus">       <img src="img/photos/virus.jpg"         class="t0" title="樣本分析"/></a>
     <a href="#gdb">         <img src="img/photos/gdb.jpg"           class="t0" title="GDB"/></a>
     <a href="#bgb">         <img src="img/photos/bgb.jpg"           class="t0" title="BGB Debugger"/></a>
     <a href="#fceux">       <img src="img/photos/fceux.jpg"         class="t0" title="FCEUX"/></a>
