--- a/program.htm
+++ b/program.htm
@@ -1560,6 +1560,13 @@ Capture Screen</a><br>
         <a href="program/vc_mfc_dlg_event.htm">
         Handle Event</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Single Document Interface (SDI)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/vc_mfc_sdi_window.htm">
+        Create Window</a><br>
+
 &dash;
 <a href="program/vc_wow64.htm">
 Wow64</a><br>
