VC Added an exanple for sdi.

--- a/program.htm
+++ b/program.htm
@@ -1567,6 +1567,10 @@ Capture Screen</a><br>
         <a href="program/vc_mfc_sdi_window.htm">
         Create Window</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/vc_mfc_sdi_event.htm">
+        Handle Event</a><br>
+
 &dash;
 <a href="program/vc_wow64.htm">
 Wow64</a><br>
