--- a/program/vc_mfc_sdi_event.htm
+++ b/program/vc_mfc_sdi_event.htm
@@ -57,7 +57,7 @@ CMainApp theApp;
 	
 void CMainApp::OnTest()
 {
-    MessageBox(NULL, "Tes", "main", IDOK);
+    MessageBox(NULL, "Test", "main", IDOK);
 }
 
 BOOL CMainApp::InitInstance()
