--- a/program/vc_mfc_hello.htm
+++ b/program/vc_mfc_hello.htm
@@ -8,27 +8,18 @@
 main.cpp
 </p>
 <pre class="brush:cpp">
-#define VC_EXTRALEAN
-
 #include &lt;afxwin.h&gt;
-#include &lt;afxext.h&gt;
-#include &lt;afxdisp.h&gt;
-#include &lt;afxdtctl.h&gt;
-#include &lt;afxcmn.h&gt;
-
+ 
 class CMyApp : public CWinApp
 {
 public:
-    virtual BOOL InitInstance();
+    BOOL InitInstance() {
+        MessageBox(NULL, "Hello, world!", "main", IDOK);
+        return FALSE;
+    }
 };
-
+ 
 CMyApp myApp;
-
-BOOL CMyApp::InitInstance()
-{
-    MessageBox(NULL, "Hello, world!", "main", IDOK);
-    return FALSE;
-}
 </pre><br>
 
 <p>
