--- a/program/vc_mfc_makefile.htm
+++ b/program/vc_mfc_makefile.htm
@@ -19,13 +19,13 @@ LDFLAGS  = /nologo /subsystem:windows /incremental:yes /pdb:"$(OUTDIR)\$(TARGET)
 OBJS     = "$(OUTDIR)\$(TARGET).obj" "$(OUTDIR)\$(TARGET).res"
 
 all:
-	if not exist "$(OUTDIR)/$(NULL)" mkdir "$(OUTDIR)"
+	rmdir /s /q $(OUTDIR)
+	mkdir "$(OUTDIR)"
+	if not exist $(TARGET).rc copy NUL $(TARGET).rc
 	$(CPP) $(CXXFLAGS) $(TARGET).cpp
 	$(RC) $(RCFLAGS) $(TARGET).rc
 	$(LD) $(LDFLAGS) $(OBJS)
-
-clean:
-	rmdir /s /q $(OUTDIR)
+	"$(OUTDIR)\$(TARGET)"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
