--- a/program/vc_mfc_sdi_window.htm
+++ b/program/vc_mfc_sdi_window.htm
@@ -8,80 +8,32 @@
 main.cpp
 </p>
 <pre class="brush:cpp">
-#define VC_EXTRALEAN
-
 #include &lt;afxwin.h&gt;
-#include &lt;afxext.h&gt;
-#include &lt;afxdisp.h&gt;
-#include &lt;afxdtctl.h&gt;
-#include &lt;afxcmn.h&gt;
-
-#include "res.h"
 
 class CMainFrame : public CFrameWnd
 {
-protected:
-    DECLARE_DYNAMIC(CMainFrame)
-
 public:
-    virtual BOOL PreCreateWindow(CREATESTRUCT &amp;cs);
+    CMainFrame() {
+        RECT rt = {0, 0, 300, 300};
+
+        Create(NULL, "main", WS_OVERLAPPEDWINDOW, rt);
+    }
 };
-
-IMPLEMENT_DYNAMIC(CMainFrame, CFrameWnd)
-
-BOOL CMainFrame::PreCreateWindow(CREATESTRUCT &amp;cs)
-{
-    if (!CFrameWnd::PreCreateWindow(cs))
-        return FALSE;
-
-    cs.cx = 300;
-    cs.cy = 300;
-    cs.lpszClass = AfxRegisterWndClass(0);
-    return TRUE;
-}
 
 class CMainApp : public CWinApp
 {
 public:
-    virtual BOOL InitInstance();
+    BOOL InitInstance() {
+        CMainFrame *pFrame = new CMainFrame;
+
+        m_pMainWnd = pFrame;
+        pFrame-&gt;ShowWindow(SW_SHOW);
+        pFrame-&gt;UpdateWindow();
+        return TRUE;
+    }
 };
 
 CMainApp theApp;
-	
-BOOL CMainApp::InitInstance()
-{
-    CMainFrame *pFrame = new CMainFrame;
-    m_pMainWnd = pFrame;
-
-    pFrame-&gt;LoadFrame(IDR_MAINFRAME, WS_OVERLAPPEDWINDOW, NULL, NULL);
-    pFrame-&gt;ShowWindow(SW_SHOW);
-    pFrame-&gt;UpdateWindow();
-    return TRUE;
-}
-</pre><br>
-
-<p>
-main.rc
-</p>
-<pre>
-#include "res.h"
-#include "afxres.h"
-
-IDR_MAINFRAME MENU PRELOAD DISCARDABLE 
-BEGIN
-    POPUP "&amp;Test"
-    BEGIN
-        MENUITEM "Run Test", ID_TEST
-    END
-END
-</pre><br>
-
-<p>
-res.h
-</p>
-<pre>
-#define IDR_MAINFRAME 100
-#define ID_TEST       101
 </pre><br>
 
 <p>
@@ -90,9 +42,7 @@ res.h
 <pre>
 $ export WINEPREFIX=/home/user/.wine_amd64
 
-$ box86 wine nmake -f main.mak clean
 $ box86 wine nmake -f main.mak
-$ box86 wine Debug/main.exe
 </pre><br>
 
 <p>
