--- a/program/vc_mfc_sdi_window.htm
+++ b/program/vc_mfc_sdi_window.htm
@@ -9,31 +9,31 @@ main.cpp
 </p>
 <pre class="brush:cpp">
 #include &lt;afxwin.h&gt;
-
-class CMainFrame : public CFrameWnd
+ 
+class CMyFrame : public CFrameWnd
 {
 public:
-    CMainFrame() {
+    CMyFrame() {
         RECT rt = {0, 0, 300, 300};
-
+ 
         Create(NULL, "main", WS_OVERLAPPEDWINDOW, rt);
     }
 };
-
-class CMainApp : public CWinApp
+ 
+class CMyApp : public CWinApp
 {
 public:
     BOOL InitInstance() {
-        CMainFrame *pFrame = new CMainFrame;
-
+        CMyFrame *pFrame = new CMyFrame;
+ 
         m_pMainWnd = pFrame;
         pFrame-&gt;ShowWindow(SW_SHOW);
         pFrame-&gt;UpdateWindow();
         return TRUE;
     }
 };
-
-CMainApp theApp;
+ 
+CMyApp myApp;
 </pre><br>
 
 <p>
