--- a/program/vc_mfc_dlg_window.htm
+++ b/program/vc_mfc_dlg_window.htm
@@ -8,68 +8,32 @@
 main.cpp
 </p>
 <pre class="brush:cpp">
-#define VC_EXTRALEAN
-
 #include &lt;afxwin.h&gt;
-#include &lt;afxext.h&gt;
-#include &lt;afxdisp.h&gt;
-#include &lt;afxdtctl.h&gt;
-#include &lt;afxcmn.h&gt;
-
 #include "res.h"
-
+ 
 class CMyDlg : public CDialog
 {
 public:
-    CMyDlg(CWnd *pParent = NULL);
+    CMyDlg();
     enum { IDD = IDD_MAIN_DIALOG };
-
-protected:
-    virtual void DoDataExchange(CDataExchange *pDX);
-    virtual BOOL OnInitDialog();
-
-    afx_msg void OnPaint();
-    DECLARE_MESSAGE_MAP()
 };
-
-CMyDlg::CMyDlg(CWnd *pParent) : CDialog(CMyDlg::IDD, pParent)
+    
+CMyDlg::CMyDlg() : CDialog(CMyDlg::IDD)
 {
 }
-
-void CMyDlg::DoDataExchange(CDataExchange *pDX)
-{
-    CDialog::DoDataExchange(pDX);
-}
-
-BEGIN_MESSAGE_MAP(CMyDlg, CDialog)
-    ON_WM_PAINT()
-END_MESSAGE_MAP()
-
-BOOL CMyDlg::OnInitDialog()
-{
-    CDialog::OnInitDialog();
-    return TRUE;
-}
-
-void CMyDlg::OnPaint() 
-{
-    CDialog::OnPaint();
-}
-
+ 
 class CMyApp : public CWinApp
 {
 public:
-    virtual BOOL InitInstance();
+    BOOL InitInstance();
 };
-
+ 
 CMyApp theApp;
 
 BOOL CMyApp::InitInstance()
 {
-    AfxEnableControlContainer();
-    Enable3dControls();
-
     CMyDlg dlg;
+
     m_pMainWnd = &amp;dlg;
     dlg.DoModal();
     return FALSE;
@@ -83,14 +47,12 @@ main.rc
 #include "res.h"
 #include "afxres.h"
 
-IDD_MAIN_DIALOG DIALOGEX  0, 0, 200, 100 
-STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+IDD_MAIN_DIALOG DIALOGEX  0, 0, 150, 100 
+STYLE DS_MODALFRAME | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "main"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,140,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,140,23,50,14
 END
 </pre><br>
 
