--- a/program/vc_mfc_hello.htm
+++ b/program/vc_mfc_hello.htm
@@ -9,16 +9,16 @@ main.cpp
 </p>
 <pre class="brush:cpp">
 #include &lt;afxwin.h&gt;
- 
+  
 class CMyApp : public CWinApp
 {
 public:
     BOOL InitInstance() {
-        MessageBox(NULL, "Hello, world!", "main", IDOK);
+        AfxMessageBox("Hello, world!");
         return FALSE;
     }
 };
- 
+  
 CMyApp myApp;
 </pre><br>
 
