--- a/program/vc_mfc_dlg_event.htm
+++ b/program/vc_mfc_dlg_event.htm
@@ -8,75 +8,44 @@
 main.cpp
 </p>
 <pre class="brush:cpp">
-#define VC_EXTRALEAN
-
 #include &lt;afxwin.h&gt;
-#include &lt;afxext.h&gt;
-#include &lt;afxdisp.h&gt;
-#include &lt;afxdtctl.h&gt;
-#include &lt;afxcmn.h&gt;
-
 #include "res.h"
-
+  
 class CMyDlg : public CDialog
 {
 public:
-    CMyDlg(CWnd *pParent = NULL);
+    CMyDlg();
     enum { IDD = IDD_MAIN_DIALOG };
 
-protected:
-    virtual void DoDataExchange(CDataExchange *pDX);
-    virtual BOOL OnInitDialog();
-
-    afx_msg void OnPaint();
     afx_msg void OnTest();
     DECLARE_MESSAGE_MAP()
 };
 
-CMyDlg::CMyDlg(CWnd *pParent) : CDialog(CMyDlg::IDD, pParent)
-{
-}
-
-void CMyDlg::DoDataExchange(CDataExchange *pDX)
-{
-    CDialog::DoDataExchange(pDX);
-}
-
 BEGIN_MESSAGE_MAP(CMyDlg, CDialog)
-    ON_WM_PAINT()
-    ON_BN_CLICKED(IDM_TEST, OnTest)
+    ON_BN_CLICKED(ID_TEST, OnTest)
 END_MESSAGE_MAP()
 
 void CMyDlg::OnTest()
 {
-    MessageBox("Test");
+    AfxMessageBox("Test");
 }
 
-BOOL CMyDlg::OnInitDialog()
+CMyDlg::CMyDlg() : CDialog(CMyDlg::IDD)
 {
-    CDialog::OnInitDialog();
-    return TRUE;
 }
-
-void CMyDlg::OnPaint() 
-{
-    CDialog::OnPaint();
-}
-
+  
 class CMyApp : public CWinApp
 {
 public:
-    virtual BOOL InitInstance();
+    BOOL InitInstance();
 };
-
+  
 CMyApp theApp;
-
+ 
 BOOL CMyApp::InitInstance()
 {
-    AfxEnableControlContainer();
-    Enable3dControls();
-
     CMyDlg dlg;
+ 
     m_pMainWnd = &amp;dlg;
     dlg.DoModal();
     return FALSE;
@@ -90,14 +59,13 @@ main.rc
 #include "res.h"
 #include "afxres.h"
 
-IDD_MAIN_DIALOG DIALOGEX  0, 0, 200, 100 
-STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+IDD_MAIN_DIALOG DIALOGEX  0, 0, 150, 100 
+STYLE DS_MODALFRAME | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "main"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDM_TEST,140,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,140,23,50,14
+    DEFPUSHBUTTON   "Test",ID_TEST,10,10,50,30
 END
 </pre><br>
 
@@ -106,7 +74,7 @@ res.h
 </p>
 <pre>
 #define IDD_MAIN_DIALOG 101
-#define IDM_TEST        102
+#define ID_TEST         102
 </pre><br>
 
 <p>
@@ -120,8 +88,8 @@ $ box86 wine nmake -f main.mak
 
 <p>
 完成<br>
-<img style="border:0px" src="vc_mfc_dlg_window/1.jpg" class="maxSize"><br>
-<img style="border:0px" src="vc_mfc_dlg_event/1.jpg" class="maxSize">
+<img style="border:0px" src="vc_mfc_dlg_event/1.jpg" class="maxSize"><br>
+<img style="border:0px" src="vc_mfc_dlg_event/2.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
