Debian How to build wine.

--- a/system.htm
+++ b/system.htm
@@ -42,6 +42,10 @@
 Debian</h3>
 <hr size="1"><br><br><br><br><br>
 
+&dash;
+<a href="system/debian_build_wine.htm">
+Build Wine</a><br>
+
 &lowast;
 <a href="system/debian/fonts.htm">
 中文字型</a><br>
