--- a/program/vc_mfc_sdi_window.htm
+++ b/program/vc_mfc_sdi_window.htm
@@ -9,29 +9,35 @@ main.cpp
 </p>
 <pre class="brush:cpp">
 #include &lt;afxwin.h&gt;
-  
+   
 class CMyFrame : public CFrameWnd
 {
 public:
-    CMyFrame() {
-        Create(NULL, "main", WS_VISIBLE, CRect(0, 0, 300, 300));
-    }
+    CMyFrame();
 };
-  
+    
+CMyFrame::CMyFrame()
+{
+    Create(NULL, "main", WS_VISIBLE, CRect(0, 0, 300, 300));
+}
+   
 class CMyApp : public CWinApp
 {
 public:
-    BOOL InitInstance() {
-        CMyFrame *pFrame = new CMyFrame;
-  
-        m_pMainWnd = pFrame;
-        pFrame-&gt;ShowWindow(SW_SHOW);
-        pFrame-&gt;UpdateWindow();
-        return TRUE;
-    }
+    BOOL InitInstance();
 };
-  
+   
 CMyApp myApp;
+    
+BOOL CMyApp::InitInstance()
+{
+    CMyFrame *pFrame = new CMyFrame;
+
+    m_pMainWnd = pFrame;
+    pFrame-&gt;ShowWindow(SW_SHOW);
+    pFrame-&gt;UpdateWindow();
+    return TRUE;
+}
 </pre><br>
 
 <p>
