--- a/program/vc_mfc_sdi_event.htm
+++ b/program/vc_mfc_sdi_event.htm
@@ -8,92 +8,55 @@
 main.cpp
 </p>
 <pre class="brush:cpp">
-#define VC_EXTRALEAN
-
 #include &lt;afxwin.h&gt;
-#include &lt;afxext.h&gt;
-#include &lt;afxdisp.h&gt;
-#include &lt;afxdtctl.h&gt;
-#include &lt;afxcmn.h&gt;
 
-#include "res.h"
+#define ID_TEST 100
 
-class CMainFrame : public CFrameWnd
+class CMyFrame : public CFrameWnd
 {
+public:
+    CMyFrame();
+    DECLARE_MESSAGE_MAP()
+
 protected:
-    DECLARE_DYNAMIC(CMainFrame)
+    afx_msg void OnTest();
 
-public:
-    virtual BOOL PreCreateWindow(CREATESTRUCT &amp;cs);
+private:
+    CButton m_Button;
 };
 
-IMPLEMENT_DYNAMIC(CMainFrame, CFrameWnd)
-
-BOOL CMainFrame::PreCreateWindow(CREATESTRUCT &amp;cs)
-{
-    if (!CFrameWnd::PreCreateWindow(cs))
-        return FALSE;
-
-    cs.cx = 300;
-    cs.cy = 300;
-    cs.lpszClass = AfxRegisterWndClass(0);
-    return TRUE;
-}
-
-class CMainApp : public CWinApp
-{
-public:
-    virtual BOOL InitInstance();
-
-	afx_msg void OnTest();
-	DECLARE_MESSAGE_MAP()
-};
-
-BEGIN_MESSAGE_MAP(CMainApp, CWinApp)
-	ON_COMMAND(ID_TEST, OnTest)
+BEGIN_MESSAGE_MAP(CMyFrame, CFrameWnd)
+    ON_COMMAND(ID_TEST, OnTest)
 END_MESSAGE_MAP()
 
-CMainApp theApp;
-	
-void CMainApp::OnTest()
+void CMyFrame::OnTest()
 {
-    MessageBox(NULL, "Test", "main", IDOK);
+    AfxMessageBox("Test");
 }
 
-BOOL CMainApp::InitInstance()
+CMyFrame::CMyFrame()
 {
-    CMainFrame *pFrame = new CMainFrame;
-    m_pMainWnd = pFrame;
+    Create(NULL, "main", WS_VISIBLE, CRect(0, 0, 300, 300));
+    m_Button.Create("Test", WS_CHILD | WS_VISIBLE | BS_PUSHBUTTON, CRect(50, 50, 100, 100), this, ID_TEST);
+}
+   
+class CMyApp : public CWinApp
+{
+public:
+    BOOL InitInstance();
+};
+   
+CMyApp myApp;
+    
+BOOL CMyApp::InitInstance()
+{
+    CMyFrame *pFrame = new CMyFrame;
 
-    pFrame-&gt;LoadFrame(IDR_MAINFRAME, WS_OVERLAPPEDWINDOW, NULL, NULL);
+    m_pMainWnd = pFrame;
     pFrame-&gt;ShowWindow(SW_SHOW);
     pFrame-&gt;UpdateWindow();
     return TRUE;
 }
-</pre><br>
-
-<p>
-main.rc
-</p>
-<pre>
-#include "res.h"
-#include "afxres.h"
-
-IDR_MAINFRAME MENU PRELOAD DISCARDABLE 
-BEGIN
-    POPUP "&amp;Test"
-    BEGIN
-        MENUITEM "Run Test", ID_TEST
-    END
-END
-</pre><br>
-
-<p>
-res.h
-</p>
-<pre>
-#define IDR_MAINFRAME 100
-#define ID_TEST       101
 </pre><br>
 
 <p>
@@ -102,9 +65,7 @@ res.h
 <pre>
 $ export WINEPREFIX=/home/user/.wine_amd64
 
-$ box86 wine nmake -f main.mak clean
 $ box86 wine nmake -f main.mak
-$ box86 wine Debug/main.exe
 </pre><br>
 
 <p>
