--- a/program.htm
+++ b/program.htm
@@ -27,7 +27,8 @@
     <a href="#nasm">            <img src="img/photos/nasm.jpg"          class="t0" title="Netwide Assembler (NASM)"/></a>
     <a href="#hla">             <img src="img/photos/hla.jpg"           class="t0" title="High Level Assembly(HLA)"/></a>
     <a href="#fasm">            <img src="img/photos/fasm.jpg"          class="t0" title="Flat Assembler (FASM)"/></a>
-    <a href="#vc">              <img src="img/photos/vc.jpg"            class="t0" title="Visual C++"/></a>
+    <a href="#vc">              <img src="img/photos/vc.jpg"            class="t0" title="Visual C++ 6.0"/></a>
+    <a href="#delphi7">         <img src="img/photos/delphi7.jpg"       class="t0" title="Delphi 7"/></a>
     <a href="#opencv">          <img src="img/photos/opencv.jpg"        class="t0" title="OpenCV"/></a>
     <a href="#sdl">             <img src="img/photos/sdl.jpg"           class="t0" title="SDL"/></a>
     <a href="#wayland">         <img src="img/photos/wayland.jpg"       class="t0" title="Wayland"/></a>
@@ -1628,6 +1629,15 @@ FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 解決LNK1112: module machine type 'x64' conflicts with target machine type 'X86'問題</a><br>
 <br><br><br><br>
 
+<div id="delphi7"></div>
+<h3><img src="img/photos/delphi7.jpg" class="floatLeft"/>
+Delphi 7</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="program/delphi7_setup.htm">
+開發環境</a><br>
+<br><br><br><br>
 
 <div id="opencv"></div>
 <h3><img src="img/photos/opencv.jpg" class="floatLeft"/>
