C++ Builder 6 How to prepare environment.

--- a/program.htm
+++ b/program.htm
@@ -28,6 +28,7 @@
     <a href="#hla">             <img src="img/photos/hla.jpg"           class="t0" title="High Level Assembly(HLA)"/></a>
     <a href="#fasm">            <img src="img/photos/fasm.jpg"          class="t0" title="Flat Assembler (FASM)"/></a>
     <a href="#vc">              <img src="img/photos/vc.jpg"            class="t0" title="Visual C++ 6.0"/></a>
+    <a href="#bcb6">            <img src="img/photos/bcb6.jpg"          class="t0" title="C++ Builder 6"/></a>
     <a href="#delphi7">         <img src="img/photos/delphi7.jpg"       class="t0" title="Delphi 7"/></a>
     <a href="#opencv">          <img src="img/photos/opencv.jpg"        class="t0" title="OpenCV"/></a>
     <a href="#sdl">             <img src="img/photos/sdl.jpg"           class="t0" title="SDL"/></a>
@@ -1627,6 +1628,16 @@ FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 &dash;
 <a href="program/vc_fix_lnk1112.htm">
 解決LNK1112: module machine type 'x64' conflicts with target machine type 'X86'問題</a><br>
+<br><br><br><br>
+
+<div id="bcb6"></div>
+<h3><img src="img/photos/bcb6.jpg" class="floatLeft"/>
+C++ Builder 6</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="program/bcb6_setup.htm">
+開發環境</a><br>
 <br><br><br><br>
 
 <div id="delphi7"></div>
