C++ Builder 6 Fixed wine issue.

--- a/program.htm
+++ b/program.htm
@@ -1638,6 +1638,10 @@ C++ Builder 6</h3>
 &dash;
 <a href="program/bcb6_setup.htm">
 開發環境</a><br>
+
+&dash;
+<a href="program/bcb6_fix_wine.htm">
+解決無法在Wine環境下編譯的問題</a><br>
 <br><br><br><br>
 
 <div id="delphi7"></div>
