--- a/program.htm
+++ b/program.htm
@@ -1626,6 +1626,10 @@ FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 解決Internal error during IncrBuildImage問題</a><br>
 
 &dash;
+<a href="program/vc_fix_wine.htm">
+解決Err:module:import_dll Library krnl386.exe16問題</a><br>
+
+&dash;
 <a href="program/vc_fix_lnk1112.htm">
 解決LNK1112: module machine type 'x64' conflicts with target machine type 'X86'問題</a><br>
 <br><br><br><br>
