VC Fixed wine installation issue.

--- a/program.htm
+++ b/program.htm
@@ -1618,6 +1618,10 @@ FILE_FLAG_WRITE_THROUGH、FILE_FLAG_NO_BUFFERING</a><br>
 解決無法自動顯示函數的問題</a><br>
 
 &dash;
+<a href="program/vc_fix_ntsp.htm">
+解決Wine Service Pack Setup Error問題</a><br>
+
+&dash;
 <a href="program/vc_fix_afxcontrolbars.htm">
 解決Cannot open file: afxcontrolbars.h問題</a><br>
 
