--- a/system/debian_build_wine.htm
+++ b/system/debian_build_wine.htm
@@ -19,7 +19,7 @@ $ mkdir -p build/wine-32
 $ mkdir -p build/wine-64
 
 $ cd build/wine-64
-$ ../../wine/configure CFLAGS="-march=native -O3 -pipe -fstack-protector-strong" --enable-win64
+$ ../../configure CFLAGS="-march=native -O3 -pipe -fstack-protector-strong" --enable-win64
 $ make -j4
 $ sudo make install
 
